--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-pie-chart": "^1.0.13",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
